--- a/WEBSITE/Contact.html
+++ b/WEBSITE/Contact.html
@@ -53,7 +53,7 @@
 </div>
 <div style="max-width:100%;list-style:none; transition: none;overflow:hidden;width:1350px;height:555px;"><div id="googlemaps-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=fast+nuces+chiniot&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="googlemaps-code" href="https://www.embed-map.com" id="make-mapinformation">https://www.embed-map.com</a><style>#googlemaps-canvas img{max-height:none;max-width:none!important;background:none!important;}</style></div>
 <pre>
-<h1 style="color: white">E-mail : loronpigmentsofficial@gmail.com                      Contact number : 03055003963</h1>
+<h1 style="color: white">E-mail : muhammad3245571106@gmail.com                      Contact number : 03245571106</h1>
 </pre>
 
 
